projekt/kube/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  selector:
    matchLabels:
      app: server
  replicas: 1
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: wiktorplu/backend-app:1.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: server-service-clusterip
spec:
  selector:
    app: server
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
