projekt/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    
spec:
  rules:
  - host: project-k8s-app.com
    http:
      paths:
        - path: /?(.*)
          pathType: Prefix
          backend:
            service:
              name: front-service-clusterip
              port:
                number: 80
            
        - path: /api/?(.*)
          pathType: Prefix
          backend:
            service:
              name: server-service-clusterip
              port:
                number: 5000
